feat: estilos h1 y modal de imagenes en productos

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- Modal   para visualizar las imagenes completas-->
+    <div id="modalImagen" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:9999; justify-content:center; align-items:center;">
+        <img id="imagenModal" src="" style="max-width:90%; max-height:90%; border-radius:10px; box-shadow: 0 0 30px rgba(255,255,255,0.3);">
+        <span onclick="cerrarModal()" style="position:absolute; top:20px; right:30px; color:white; font-size:2rem; cursor:pointer;">&times;</span>
+</div>
   </body>
 </html>
